<resources>
    <string name="app_name">Inventory App</string>
    <string name="new_product">New Product</string>
    <string name="empty_view_message">Nothing to display. Please add some products</string>
    <string name="product_name">Product name: </string>
    <string name="price">Price: </string>
    <string name="quantity">Quantity: </string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone">Supplier phone</string>
    <string name="save_product">Save product</string>
    <string name="edit_title">Edit product</string>
    <string name="add_title">Add new product</string>
    <string name="required_name">Product requires a name</string>
    <string name="required_price">Product requires valid price</string>
    <string name="required_quantity">Product requires valid quantity</string>
    <string name="required_supplier_name">Product requires a supplier name</string>
    <string name="required_supplier_phone">Product requires a supplier phone</string>
    <string name="validation_error">Validation Error: </string>
    <string name="create_error">An error occurred while creating product</string>
    <string name="create_success">Product saved with success</string>
    <string name="update_error">Update has failed</string>
    <string name="update_success">Update successful</string>
    <string name="quantity_validation">Quantity value needs be greater than zero</string>
    <string name="details_title">Product Details</string>
    <string name="delete_success">Product deleted with success</string>
    <string name="delete_error">An error occurred while deleting product error</string>
    <string name="sell">Sell</string>
    <string name="details">Details</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
